another quick fix of a navbar overlaping

--- a/screen-scaling/phone.css
+++ b/screen-scaling/phone.css
@@ -277,6 +277,10 @@
     display: none;
   }
 
+  .menu-iphone-under {
+    display: none;
+  }
+
   .card-img-top-phone {
     display: none;
   }
